qt/quick/gen_qsgsimpletexturenode.h

class QRectF;
class QSGSimpleTextureNode;
class QSGTexture;
typedef struct QRectF QRectF;
typedef struct QSGSimpleTextureNode QSGSimpleTextureNode;
typedef struct QSGTexture QSGTexture;
QSGSimpleTextureNode* QSGSimpleTextureNode_new();
void QSGSimpleTextureNode_setRect(QSGSimpleTextureNode* self, QRectF* rect);
void QSGSimpleTextureNode_setRect2(QSGSimpleTextureNode* self, double x, double y, double w, double h);
QRectF* QSGSimpleTextureNode_rect(const QSGSimpleTextureNode* self);
void QSGSimpleTextureNode_setSourceRect(QSGSimpleTextureNode* self, QRectF* r);
void QSGSimpleTextureNode_setSourceRect2(QSGSimpleTextureNode* self, double x, double y, double w, double h);
QRectF* QSGSimpleTextureNode_sourceRect(const QSGSimpleTextureNode* self);
void QSGSimpleTextureNode_setTexture(QSGSimpleTextureNode* self, QSGTexture* texture);
QSGTexture* QSGSimpleTextureNode_texture(const QSGSimpleTextureNode* self);
void QSGSimpleTextureNode_setFiltering(QSGSimpleTextureNode* self, int filtering);
int QSGSimpleTextureNode_filtering(const QSGSimpleTextureNode* self);
void QSGSimpleTextureNode_setTextureCoordinatesTransform(QSGSimpleTextureNode* self, int mode);
int QSGSimpleTextureNode_textureCoordinatesTransform(const QSGSimpleTextureNode* self);
void QSGSimpleTextureNode_setOwnsTexture(QSGSimpleTextureNode* self, bool owns);
bool QSGSimpleTextureNode_ownsTexture(const QSGSimpleTextureNode* self);
bool QSGSimpleTextureNode_override_virtual_isSubtreeBlocked(void* self, intptr_t slot);
bool QSGSimpleTextureNode_virtualbase_isSubtreeBlocked(const void* self);
bool QSGSimpleTextureNode_override_virtual_preprocess(void* self, intptr_t slot);
void QSGSimpleTextureNode_virtualbase_preprocess(void* self);
void QSGSimpleTextureNode_delete(QSGSimpleTextureNode* self);